# NetLinkAnalyze

./: .buildinfo  .bumpversion.cfg  LICENSE.md  README.md  README_template.md  code_documentation.html  genindex.html  howtos.html  index.html  licenses.html  licenses_table.html  objects.inv  project_overview.html  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg
.dvc/: config
_sources/: code_documentation.md.txt  index.rst.txt  licenses_table.rst.txt  project_overview.md.txt
_sources/api/: modules.rst.txt
api/: cflg.html  modules.html
data/main/: coverage.xml
docs/: conf.py  howtos.rst  index.rst
docs/api/: cflg.rst  modules.rst
howtos/: setup_dev_env.html
src/cflg/: CreateTables.py  FormFeaturesDF.py  __init__.py
src/cflg/src/: Base.py  CreateTables.py  FeatureFormation.py  FormFeaturesDF.py  ModelPerformance.py  main.py
tests/: datasets.dvc  test.py  test_cflg.py
