[metadata]
name = NetLinkAnalyzer
# do not change version by hand: use bump_version.sh
version = file: src/cflg/VERSION
description = "The program for calculating features of links in large-scale networks and calculating characteristics of static graphs."
author = Roman Neronov
author_email = roman.nieronov@gmail.com
license = Other/Proprietary License
license_files = LICENSE.md
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Science/Research
    License :: Other/Proprietary License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Artificial Intelligence


[options]
package_dir=
    =src
packages=find:
zip_safe = False
platforms = any
include_package_data = True
python_requires = >=3.8
install_requires =
    python-dotenv>=0.5.1
    ipython==8.18.1
    numpy==1.26.2
    pandas==2.1.4
    pydantic==2.5.2
    scikit_learn==1.3.2
    setuptools==68.0.0
    Jinja2==3.1.2


[options.packages.find]
where=src

[bdist_wheel]
universal = 1

[aliases]
# Alias `setup.py test` to `setup.py pytest`
test = pytest
